further improvements to the media gallery on thre series page
